// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeLinkItem should render correctly with the provided props 1`] = `
<li
  className="rmd-tree-item"
  role="none"
>
  <div
    aria-level={1}
    aria-posinset={1}
    aria-setsize={1}
    className="rmd-tree-item__content rmd-list-item rmd-list-item--stateful rmd-states--simple"
    disabled={false}
    href="/"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
    role="treeitem"
    tabIndex={-1}
  >
    <span
      className="rmd-list-item__text"
    >
      Hello!
    </span>
  </div>
</li>
`;

exports[`TreeLinkItem should render correctly with the provided props 2`] = `
<li
  className="rmd-tree-item"
  role="none"
>
  <div
    aria-level={1}
    aria-posinset={1}
    aria-setsize={1}
    className="rmd-tree-item__content rmd-list-item rmd-list-item--stateful rmd-states--simple rmd-states--selected"
    disabled={false}
    href="/"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
    role="treeitem"
    tabIndex={0}
  >
    <span
      className="rmd-list-item__text"
    >
      Hello!
    </span>
  </div>
</li>
`;
